lots of changes and bugfixes, notably we now use socket.io-sessions instead of parsing through our cookie (highly insecure)

--- a/views/home.jade
+++ b/views/home.jade
@@ -26,7 +26,7 @@ img#loading(src='img/spinner.gif', class='loading')
       li(style='float:right;')
         input#new-tweet-submit(type='submit', disabled='disabled', value='send')
       li(style='float:left;width:93%;')
-        input#new-tweet(type='text', disabled='disabled', placeholder='write your tweet here!', style='width:100%;', maxlength='140', value='loading...')
+        input#new-tweet(type='text', disabled='disabled', placeholder='write your tweet here!', style='width:100%;', value='loading...')
 
   .hr
 
