--- a/views/home.jade
+++ b/views/home.jade
@@ -25,7 +25,7 @@ img#loading(src='img/spinner.gif', class='loading')
     ul.tabbed
       li(style='float:right;')
         input#new-tweet-submit(type='submit', disabled='disabled', value='send')
-      li(style='float:left;width:93%;')
+      li#new-tweet-input-li(style='float:left;')
         input#new-tweet(type='text', disabled='disabled', placeholder='write your tweet here!', style='width:100%;', value='loading...')
 
   .hr
