--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans')
     link(rel='stylesheet', href='/css/z.css')
     script(type='text/javascript', src='/socket.io/socket.io.js')
+    script(type='text/javascript', src='/socket.io/socket.io-sessions.js')
     script(type='text/javascript', src='/js/libs.js')
-    script= session_script
     script(type='text/javascript', src='/js/z.js')
   body!= body
