--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans')
-    link(rel='stylesheet', href='/css/z.css')
+    link(rel='stylesheet', href='/css/z.min.css')
     script(type='text/javascript', src='/socket.io/socket.io.js')
     script(type='text/javascript', src='/socket.io/socket.io-sessions.js')
     script(type='text/javascript', src='/js/libs.js')
-    script(type='text/javascript', src='/js/z.js')
+    script(type='text/javascript', src='/js/z.min.js')
   body!= body
