more fixes and enhancements (eg show the amount of tweets stored when paused)
Signed-off-by: disassemblyline <somicide@gmail.com>

--- a/views/home.jade
+++ b/views/home.jade
@@ -9,6 +9,8 @@ img#loading(src='img/spinner.gif', class='loading')
         a#clear(href='#') clear
       li(style='float:right')
         a#pause(href='#') pause
+      li(style='float:right')
+        span#paused-count(style='display:none;') (0)
       li
         a#home-timeline-click(href='#', onclick='return false;') home
       li
