growler works as it should now

--- a/views/home.jade
+++ b/views/home.jade
@@ -40,4 +40,4 @@ img#loading(src='img/spinner.gif', class='loading')
     ul#dms-inbox-timeline
     ul#dms-outbox-timeline(style='display:none;')
 
-script z_engine_kickstart();
+script var growler = new Growler(); //we need this here for the growler to work properly
