--- a/views/home.jade
+++ b/views/home.jade
@@ -41,3 +41,5 @@ img#loading(src='img/spinner.gif', class='loading')
     ul#dms-outbox-timeline(style='display:none;')
 
 script var growler = new Growler(); //we need this here for the growler to work properly
+
+audio(id='notify-audio', preload='true', src='audio/notify.ogg')
