more ui fixes, attempt to get some more stuff working across browsers like ie (untested though)

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans')
     link(rel='stylesheet', href='/css/z.min.css')
+    meta(http-equiv='X-UA-Compatible', content='IE=9')
     script(type='text/javascript', src='/socket.io/socket.io.js')
     script(type='text/javascript', src='/socket.io/socket.io-sessions.js')
     script(type='text/javascript', src='/js/libs.js')
