--- a/public/css/z.css
+++ b/public/css/z.css
@@ -182,6 +182,7 @@ li
 	background: #FFF;
 	border: 1px solid #DDD;
 	padding: 1px 12px 0 9px;
+	behavior: url(border-radius.htc);
 }
 
 .comment-body
@@ -232,6 +233,7 @@ li
 	background: #F6F6F6;
 	margin: 10px 0 0;
 	padding: 5px 12px 10px 7px;
+	behavior: url(border-radius.htc);
 }
 
 .comment-input-text textarea
@@ -265,6 +267,7 @@ li
 	-khtml-border-radius: 4px;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
+	behavior: url(border-radius.htc);
 }
 
 .comment-content-wrapper
@@ -307,6 +310,7 @@ input, textarea
 	-webkit-transition: all .20s ease-in-out;
 	filter:progid:DXImageTransform.Microsoft.Shadow (color=#eee, Direction=135, Strength=5);
 	-ms-filter:"progid:DXImageTransform.Microsoft.Shadow (color=#eee, Direction=135, Strength=5)";
+	behavior: url(border-radius.htc);
 }
 
 input[type="text"], input[type="text"]:hover, input[type="text"]:focus, input[type="text"]:disabled,
@@ -438,6 +442,7 @@ input[type="submit"]:disabled
 	-moz-transition: all .20s ease-in-out;
 	-webkit-border-radius: 4px;
 	-webkit-transition: all .20s ease-in-out;
+	behavior: url(border-radius.htc);
 }
 
 ul.tabbed li
@@ -502,6 +507,7 @@ div.growls div.black
 	-moz-box-shadow: 0 0 5px 5px rgba(15,15,15,0.1);
 	-webkit-border-radius: 5px;
 	-webkit-box-shadow: 0 0 5px 5px rgba(15,15,15,0.1);
+	behavior: url(border-radius.htc);
 }
 
 div.growls div.small
@@ -514,6 +520,7 @@ div.growls div.small
 	-khtml-border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
+	behavior: url(border-radius.htc);
 }
 
 div.growls div.medium
@@ -526,6 +533,7 @@ div.growls div.medium
 	-khtml-border-radius: 10px;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
+	behavior: url(border-radius.htc);
 }
 
 div.growls div.large
@@ -538,6 +546,7 @@ div.growls div.large
 	-khtml-border-radius: 15px;
 	-moz-border-radius: 15px;
 	-webkit-border-radius: 15px;
+	behavior: url(border-radius.htc);
 }
 
 /*
@@ -590,19 +599,22 @@ div.growls div.large
 /* global body stuff */
 body
 {
+	font-smoothing: subpixel-antialiased;
 	font: normal 75% "Open Sans", sans-serif;
 	line-height: 1.5;
-	-webkit-font-smoothing: subpixel-antialiased;
 	height: 100%;
 	margin: 0;
-	padding: 36px 36px 0;
 	background: #888888;
 	position: relative;
 	margin: 0 auto;
 	width: 696px;
+	-khtml-font-smoothing: subpixel-antialiased;
 	-khtml-user-select: none;
+	-moz-font-smoothing: subpixel-antialiased;
 	-moz-user-select: none;
+	-o-font-smoothing: subpixel-antialiased;
 	-o-user-select: none;
+	-webkit-font-smoothing: subpixel-antialiased;
 	-webkit-user-select: none;
 	user-select: none;
 }
